Added CSS to stylize homepage

--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
           </ul>
       </nav>
    </header>
+   <br>
     <main>
       <article>
-     <h1>Get on your high horse!</h1>
+     <h1 class="slogan">Get on your high horse!</h1>
+    <button class="button"><a href="book.html">Book a trip now!</a></button>
    </article>
+  <br>
 <div>
-  <img src="horse1.jpg">
+  <img src="horse1.jpg" class="pic">
 </div>
 <div class="description">
   <h2>Giddy up and go!</h2>
