Added alt text to picture
Added alt text to picture on home page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    </article>
   <br>
 <div>
-  <img src="horse1.jpg" class="pic">
+  <img src="horse1.jpg" alt=" brown horse outside" class="pic">
 </div>
 <div class="description">
   <h2>Giddy up and go!</h2>
