--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 </head>
 <body>
     <header>
-      <nav class="menu">
-          <ul>
-              <li><a href="index.html">Horse Power</a></li>
-              <li><a href="book.html">Book</a></li>
-              <li><a href="account.html">Account</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-      </nav>
+      <div class="navbar">
+  <a href="book.html">Book</a>
+  <a href="account.html">Account</a>
+  <div class="dropdown">
+    <button class="dropbtn">More
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+    </div>
+  </div>
+</div> 
    </header>
    <br>
     <main>
