--- a/index.html
+++ b/index.html
@@ -12,29 +12,22 @@
 </head>
 <body>
     <header>
-      <div class="navbar">
-  <a href="book.html">Book</a>
-  <a href="account.html">Account</a>
-  <div class="dropdown">
-    <button class="dropbtn">More
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact Us</a>
-    </div>
-  </div>
-</div> 
+      <nav class="menu">
+        <ul>
+            <li><a href="book.html">Book</a></li>
+            <li><a href="account.html">Account</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>    
+          </ul>
+        </nav>
    </header>
-   <br>
     <main>
       <article>
-     <h1 class="slogan">Get on your high horse!</h1>
+     <h1>Get on your high horse!</h1>
     <button class="button"><a href="book.html">Book a trip now!</a></button>
    </article>
-  <br>
 <div>
-  <img src="horse1.jpg" alt=" brown horse outside" class="pic">
+  <img src="horse.jpg" alt=" brown horse outside" class="pic">
 </div>
 <div class="description">
   <h2>Giddy up and go!</h2>
