Added about page and updated CSS

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <ul>
             <li><a href="book.html">Book</a></li>
             <li><a href="account.html">Account</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>    
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>    
           </ul>
         </nav>
    </header>
     <main>
-      <article>
+      <article class="sloganbutton">
      <h1>Get on your high horse!</h1>
     <button class="button"><a href="book.html">Book a trip now!</a></button>
    </article>
