fixed breakpoint for about page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 <main>
-<article class="sloganbutton">
+<article class="sloganbutton" class="about">
  <h1>About Us!</h1>
     <button class="button"><a href="book.html">Book a trip now!</a></button>
 </article>
