chaged HTML class names

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </nav>
    </header>
     <main>
-      <article class="sloganbutton">
+      <section class="sloganbutton">
      <h1>Get on your high horse!</h1>
     <button class="button"><a href="book.html">Book a trip now!</a></button>
-   </article>
+   </section>
 <div>
   <img src="horse.jpg" alt=" brown horse outside" class="pic">
 </div>
