Added image to about page

--- a/about.html
+++ b/about.html
@@ -27,6 +27,9 @@
  <h1>About Us!</h1>
     <button class="button"><a href="book.html">Book a trip now!</a></button>
 </section>
+<div>
+  <img src="horse2.jpg" alt="girl horseback riding" class="pic">
+</div>
 <div> 
 <p>Horse Power was created in 2018 by three young entrepreneurs. They were tired of traditional ubers and taxis and wanted a new way to arrive in style. While brainstorming, they discovered that the majority of horse owners in the midwest keep their horses confined in their stalls all day while they go to their nine to five jobs. With the development of Horse Power, these horses get the exercise they need and gain a sense of fulfillment knowing they're helping their community. Horse owners can rest easy knowing their beloved pets are being well taken care of and are getting the attention they need. </p>
 <p> Each horse employed by Horse Power undergoes an extensive interview process. First, they are evaluated by a certified veteranarian to assure their physical health is the best it can be. Then, they complete a teperament test to ensure they are relaxed and well behaved around unfamiliar people. This is extremely important because of our diverse clientele. Finally, an experienced equestrian will mount the horse and take it on a two mile long trail ride on various types of terrain to test its endurance. </p>
